--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,16 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    // Apply the java plugin to add support for Java
+    id 'java'
+
+    // Apply the application plugin to add support for building a CLI application.
     id 'application'
+
+    // https://imperceptiblethoughts.com/shadow/getting-started/#default-java-groovy-tasks
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
+mainClassName='Project_1.App'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -17,6 +24,8 @@ repositories {
 }
 
 dependencies {
+
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
@@ -26,6 +35,11 @@ dependencies {
 
     implementation "com.sparkjava:spark-core:2.9.3"
     implementation "com.sparkjava:spark-template-mustache:2.7.1"
+
+    implementation "org.apache.logging.log4j:log4j-api:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-core:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.13.3"
+
 }
 
 application {
