--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,3 +51,6 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+task stage(dependsOn: ['shadowJar'])
+shadowJar.mustRunAfter clean
